--- a/config.json
+++ b/config.json
@@ -32,7 +32,12 @@
                     "tls",
                     "quic"
                 ]
-            }
+            },
+            "fallbacks": [
+                    {
+                        "dest": 5244 // 或者回落到其它也防探测的代理
+                    }
+                ]
         }
     ],
     "outbounds": [
